--- a/signUp.html
+++ b/signUp.html
@@ -1,30 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sign Up - WatchWorld</title>
+    <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="signUp.css" />
   </head>
   <body>
-    <header>
+    <header class="topbar">
       <div>WatchWorld</div>
     </header>
     <main>
-        <div>
+      <div class="signup-card">
+        <div class="signup-card__title">
           <h1>Get Started Now</h1>
-
-          <form class="signup-form">
-            <label>Name</label>
-            <input type="text" name="name" placeholder="" />
-
-            <label>Password</label>
-            <input type="password" name="password" placeholder="" />
-
-            <button class="submit">Sign Up</button>
-          </form>
-
-          <p> <a href="./signIn.html">Sign in</a> if you already have an account</p>
         </div>
+        <form class="form">
+          <div class="form__field">
+            <label>Name</label>
+            <input type="text" name="name" />
+          </div>
+          <div class="form__field">
+            <label>Password</label>
+            <input type="password" name="password" />
+          </div>
+          <button class="button button--secondary" type="submit">
+            Sign Up
+          </button>
+        </form>
+        <p>
+          <a href="./signIn.html">Sign in</a> if you already have an account
+        </p>
+      </div>
     </main>
   </body>
 </html>
