added a folder for css

--- a/signUp.html
+++ b/signUp.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sign Up - WatchWorld</title>
-    <link rel="stylesheet" href="common.css" />
-    <link rel="stylesheet" href="signUp.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/signUp.css" />
   </head>
   <body>
     <header class="topbar">
