--- a/signIn.html
+++ b/signIn.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sign In - WatchWorld</title>
-    <link rel="stylesheet" href="common.css" />
-    <link rel="stylesheet" href="signIn.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/signIn.css" />
   </head>
   <body class="">
     <header class="topbar">
